# author: yifan.chen xin.zhao

# Modify lab_4 to the lab number if you'd like, add any source files you create here as needed

add_executable(lab_4 Main.cpp
        GameBase.cpp
        GameBase.h
        TicTacToeGame.cpp
        TicTacToeGame.h
        LabUtilities.h
        LabUtilities.cpp
        GomokuGame.h
        GomokuGame.cpp)
